syntax = "proto3";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc GiveStatus (StatusRequestMessage) returns (stream StatusResponseMessage) {}

  rpc StopStatus (StatusStopRequest) returns (StatusResponseMessage) {}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message StatusRequestMessage {
  string text = 1;
  int64 timeInterval = 2;
}

message StatusStopRequest {
  string reason = 1;
}

message StatusResponseMessage {
  string status = 1;
  int64 temperature = 2;
}